--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main__form {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.form__fieldset {
+  margin-bottom: 10px;
+}
+
+.form__input,
+.form__result {
+  margin: 10px 0 30px 0;
 }
